# blinksy

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
blinksy/: Cargo.toml
blinksy-desktop/: Cargo.toml
blinksy-desktop/examples/: 1d-rainbow.rs  2d-noise.rs  2d-rainbow.rs  3d-arcs.rs  3d-cube-face-noise.rs  3d-cube-volume-noise.rs
blinksy-desktop/src/: driver.rs  lib.rs  text.rs  time.rs
blinksy/examples/: 1d-rainbow.rs  2d-noise.rs
blinksy/src/: color.rs  control.rs  dimension.rs  layout.rs  lib.rs  markers.rs  pattern.rs  pattern_switch.rs  time.rs
blinksy/src/color/: channels.rs  component.rs  convert.rs  correction.rs  gamma_srgb.rs  hsv.rs  hue.rs  led.rs  linear_srgb.rs  lms.rs  mod.rs  okhsl.rs  okhsv.rs  oklab.rs  output.rs  rgb.rs  srgb.rs  xyz.rs
blinksy/src/driver/: mod.rs
blinksy/src/drivers/: apa102.rs  graphics.rs  mod.rs  sk6812.rs  ws2812.rs
blinksy/src/layout/: layout2d.rs  layout3d.rs  mod.rs
blinksy/src/leds/: apa102.rs  lpd8806.rs  mod.rs  sk6812.rs  ws2812.rs
blinksy/src/patterns/: noise.rs  rainbow.rs
blinksy/src/util/: bits.rs  component.rs  map_range.rs  mod.rs
core/src/: control.rs  layout.rs  lib.rs  pattern.rs
core/src/driver/: mod.rs
core/src/drivers/: apa102.rs  ws2812.rs
core/src/patterns/: noise.rs  rainbow.rs
esp/: Cargo.toml
esp/blinksy-esp/: Cargo.toml
esp/blinksy-esp/src/: lib.rs  (+2 more)
esp/gledopto/: Cargo.toml
esp/src/: lib.rs  rmt.rs
src/: layout.rs  lib.rs  pattern.rs  util.rs
src/led/: clocked.rs  clockless.rs  esp.rs  mod.rs
src/patterns/: noise.rs
(+30 files in other folders)
